<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartEasyBudget</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="contacts">Contacts</string>
    <string name="gerer_budget">Apprenez à gérer votre budget</string>
    <string name="lancer_simulation">Lancer la simulation</string>
    <string name="entrer_recettes">Entrez vos recettes:</string>
    <string name="suivant">Suivant</string>
    <string name="montant">Montant</string>
    <string name="ajouter">Ajouter</string>
    <string name="description">Description</string>
    <string name="developer">Développeur: Benjamin Le</string>
    <string name="mail">Addresse e-mail: benle@hotmail.fr</string>
    <string name="menu_principal">Menu principal</string>
    <string name="entrer_depenses">Entrez vos dépenses:</string>
    <string name="result">Résultat</string>
    <string name="recommencer_simu">Recommencer la simulation</string>
    <string name="resume">Résumé</string>
	<string name="recette_activity">RecettesActivity</string>
    
    
</resources>
